--- a/News/appsettings.json
+++ b/News/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    //"NewsContext": "Server=(localdb)\\mssqllocaldb;Database=NewsContext;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "NewsContext": "Data Source=(local);Initial Catalog=News;Integrated Security=True;Trust Server Certificate=true",
+
+  }
 }
